--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ phf = { version = "0.11.2", features = ["macros"] }
 rand = "0.8.5"
 rayon = "1.8.0"
 regex = "1.10.2"
-reqwest = { version = "0.11.23", features = ["rustls-tls", "serde_json", "async-compression", "json", "trust-dns", "gzip", "brotli"] }
+reqwest = { version = "0.11.23", default_features=false, features = ["rustls-tls", "serde_json", "async-compression", "json", "trust-dns", "gzip", "brotli"] }
 scraper = "0.18.1"
 serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.110"
