--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ futures = "0.3.30"
 futures-util = "0.3.30"
 generic-array = "1.0.0"
 hex = "0.4.3"
+http = "1.0.0"
 lazy_static = "1.4.0"
 log = "0.4.20"
 phf = { version = "0.11.2", features = ["macros"] }
@@ -33,7 +34,7 @@ sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "mac
 tokio = { version = "1.35.1", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["codec", "full"] }
 tower = { version = "0.4.13", features = ["util"] }
-tower-http = { version = "0.5.0", features = ["trace", "fs"] }
+tower-http = { version = "0.5.0", features = ["trace", "fs", "cors"] }
 tracing = "0.1.40"
 trunkrs = "0.2.7"
 typenum = "1.17.0"
