--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,8 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "axios": "^1.6.5"
+    "@types/dompurify": "^3.0.5",
+    "axios": "^1.6.5",
+    "dompurify": "^3.0.8"
   }
 }
