--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+h2 = "0.4.2"
 anyhow = "1.0.79"
 askama = "0.12.1"
 axum = "0.7.3"
@@ -30,7 +31,7 @@ reqwest = { version = "0.11.23", default_features=false, features = ["rustls-tls
 scraper = "0.18.1"
 serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.110"
-sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "macros"] }
+sqlx = { version = "0.7.3", default_features=false, features = ["postgres", "runtime-tokio-rustls", "macros"] }
 tokio = { version = "1.35.1", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["codec", "full"] }
 tower = { version = "0.4.13", features = ["util"] }
