--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,7 @@ tower-http = { version = "0.5.0", features = ["trace", "fs", "cors"] }
 tracing = "0.1.40"
 trunkrs = "0.2.7"
 typenum = "1.17.0"
+
+[dev-dependencies]
+h2 = "0.4.2"
+
