Fix nickname display -- Issue #13

--- a/web/biome.json
+++ b/web/biome.json
@@ -8,5 +8,11 @@
 		"rules": {
 			"recommended": true
 		}
+	},
+
+	"formatter": {
+		"enabled": true,
+		"indentStyle": "space",
+		"indentWidth": 4
 	}
 }
