--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 [dependencies]
 mio = "0.8.11"
-h2 = "0.4.2"
+h2 = "0.4.4"
 anyhow = "1.0.79"
 askama = "0.12.1"
 axum = "0.7.3"
@@ -54,10 +54,12 @@ tracing = "0.1.40"
 trunkrs = "0.2.7"
 typenum = "1.17.0"
 utapi-rs = "0.1.2"
+whoami = "1.5.0"
 
 [dev-dependencies]
-h2 = "0.4.2"
+h2 = "0.4.4"
 mio = "0.8.11"
+whoami = "1.5.0"
 
 [profile.release]
 lto = "off"
