--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.1'
-
 services:
   db:
     image: postgres
@@ -16,10 +14,11 @@ services:
     build: .
     ports:
       - 8000:8000
-    depends_on:
-      - db
-    networks:
-        - pokebin
+    # depends_on:
+    #   - db
+    network_mode: host
+    # networks:
+    #     - pokebin
 
 networks:
   pokebin:
