--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "2.0.0"
 requires-python = ">=3.11"
 dependencies = [
     "bs4>=0.0.2",
+    "lxml>=5.4.0",
     "mlogger",
     "pylogrus>=0.4.0",
     "requests>=2.32.3",
