--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@pkmn/img": "^0.2.39",
     "solid-js": "^1.9.5"
   },
   "devDependencies": {
