--- a/extension/package.json
+++ b/extension/package.json
@@ -8,8 +8,9 @@
     "build": "./build.sh"
   },
   "dependencies": {
-    "solid-js": "^1.9.5",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "preact": "^10.26.9",
+    "solid-js": "^1.9.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
