--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,6 +1,8 @@
-name: Build and Push Docker Image
+name: Build and publish docker image
 
 on:
+  push: 
+    branches: ["main"]
   workflow_dispatch:
 
 jobs:
