--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
     "solid-js": "^1.9.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.6",
+    "oxlint": "^1.23.0",
     "@tailwindcss/postcss": "^4.1.1",
     "tailwindcss": "^4.1.1",
     "typescript": "^5.8.2",
