--- a/extension/package.json
+++ b/extension/package.json
@@ -8,9 +8,13 @@
     "build": "./build.sh"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "preact": "^10.26.9",
+    "axios": "^1.13.2",
+    "preact": "^10.28.2",
     "solid-js": "^1.9.5"
+  },
+  "overrides": {
+    "seroval": ">=1.4.1",
+    "form-data": ">=4.0.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
