--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -6,11 +6,12 @@ requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.13.3",
     "asyncio>=3.4.3",
-    "brotli>=1.1.0",
+    "brotli>=1.2.0",
     "mypy>=1.15.0",
     "requests>=2.32.3",
     "ruff>=0.11.6",
     "types-requests>=2.32.0.20250328",
+    "urllib3>=2.6.3",
 
     # "types-psycopg2>=2.9.21.20250318",
     # "psycopg2>=2.9.10",
